WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
164366
REGRESSION (Safari 10): Scrolling not working inside height 100% table
https://bugs.webkit.org/show_bug.cgi?id=164366
Summary
REGRESSION (Safari 10): Scrolling not working inside height 100% table
brett.postin
Reported
2016-11-03 08:23:03 PDT
See this jsfiddle for a demonstration:
https://jsfiddle.net/poztin/z2bh145m/7/
The blue box should be scrollable. Collapse the window so that the red box overflows the container. In Chrome and Safari < 10 this works fine. In Safari 10 the blue container is no longer scrollable.
Attachments
Patch
(4.51 KB, patch)
2016-12-06 14:22 PST
,
Dave Hyatt
no flags
Details
Formatted Diff
Diff
Patch
(4.72 KB, patch)
2016-12-06 14:26 PST
,
Dave Hyatt
zalan
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2016-11-03 10:25:53 PDT
We should find the regression point.
Radar WebKit Bug Importer
Comment 2
2016-11-03 12:57:23 PDT
<
rdar://problem/29095535
>
Darin Adler
Comment 3
2016-11-05 12:56:41 PDT
In
bug 151094
, Alexey claims the cause was <
http://trac.webkit.org/changeset/192413
>.
Dave Hyatt
Comment 4
2016-12-06 14:22:00 PST
Created
attachment 296318
[details]
Patch
Dave Hyatt
Comment 5
2016-12-06 14:26:10 PST
Created
attachment 296321
[details]
Patch
Simon Fraser (smfr)
Comment 6
2016-12-06 14:28:19 PST
Comment on
attachment 296321
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=296321&action=review
> LayoutTests/ChangeLog:10 > + * fast/table/overflow-percent-height-regression-expected.html: Added. > + * fast/table/overflow-percent-height-regression.html: Added.
I don't think "regression" in the test name is useful.
Dave Hyatt
Comment 7
2016-12-06 14:32:21 PST
Fixed in
r209421
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug