REGRESSION (Safari 10): Scrolling not working inside height 100% table https://bugs.webkit.org/show_bug.cgi?id=164366 <rdar://problem/29095535>

Reviewed by Zalan Bujtas.

Source/WebCore:

Added fast/table/overflow-percent-height-regression.html

* rendering/RenderBox.cpp:
(WebCore::RenderBox::computePercentageLogicalHeight):
This patch wasn't merged correctly from Blink. The value returned needed
to be 0, not unset.

LayoutTests:

* fast/table/overflow-percent-height-regression-expected.html: Added.
* fast/table/overflow-percent-height-regression.html: Added.



Canonical link: https://commits.webkit.org/183088@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209421 268f45cc-cd09-0410-ab3c-d52691b4dbfc